DE5310: Display issue for 'FRIDAY' when day of week section is expanded or collapsed (Fire Fox browser only)

--- a/app/component/column-names/column-names.scss
+++ b/app/component/column-names/column-names.scss
@@ -1,5 +1,5 @@
-.column-names {
-    .column-title {
+.clmn-names {
+    .clmn-title {
         color: #A0A2A1;
         font-size: 14px;
         font-weight: 600;
